# english-tutor-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_create_messages_table.py  0003_create_mistakes_table.py  0004_create_vocabulary_table.py  0005_create_translations_table.py  0006_add_gamification.py  0007_add_reminders.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
src/bot/: main.py
src/bot/handlers/: interview.py  lesson.py  modes.py  progress.py  reminders.py  start.py  translator.py  voice.py
src/bot/middlewares/: access_control.py
src/config/: settings.py
src/core/entities/: conversation.py  evaluation.py  interview.py  translation.py
src/core/interfaces/: evaluator.py  interview_coach.py  lesson_generator.py  llm.py  stt.py  tts.py
src/core/use_cases/: evaluate_speaking_turn.py  generate_daily_lesson.py  run_interview_turn.py  run_speaking_turn.py
src/infrastructure/db/: session.py
src/infrastructure/db/models/: achievement.py  message.py  mistake.py  reminder.py  (+3 more)
src/infrastructure/stt/: groq_stt.py
src/infrastructure/tts/: edge_tts_adapter.py
src/services/ai/: claude_client.py  claude_evaluator.py  claude_interviewer.py  claude_professional.py
src/services/gamification/: xp_service.py
src/services/learning/: lesson_generator.py  professional_topics.py
src/services/reminders/: content.py  scheduler.py
src/services/translator/: claude_translator.py
tests/unit/: test_access_control.py  test_reminders.py
(+7 files in other folders)
