[project]
name = "english-tutor-bot"
version = "0.1.0"
description = "Personal AI English tutor, speaking partner, interview coach and translator over Telegram"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    "aiogram>=3.15",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "apscheduler>=3.11",
    "edge-tts>=6.1",
    "groq>=0.13",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
local-voice = [
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
